ci: disabled prepare step as not used

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,22 +16,22 @@ permissions:
   actions: read
 
 jobs:
-  prepare:
-    name: detect modules
-    runs-on: ubuntu-latest
-    outputs:
-      modules: ${{ steps.matrix.outputs.modules }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2 # pin@v2.0.0
-        with:
-          fetch-depth: 0
-      - name: Detect Changes
-        id: detect-changes
-        uses: ron96G/monutil@v1.3.0
-        with:
-          base-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event_name == 'push' && github.event.before }}
-          head-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event_name == 'push' && github.sha }}
+  # prepare:
+  #   name: detect modules
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     modules: ${{ steps.matrix.outputs.modules }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2 # pin@v2.0.0
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Detect Changes
+  #       id: detect-changes
+  #       uses: ron96G/monutil@v1.3.0
+  #       with:
+  #         base-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || github.event_name == 'push' && github.event.before }}
+  #         head-commit: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.event_name == 'push' && github.sha }}
 
   common:
     name: Common
