--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -19,6 +19,5 @@ plugins:
         echo "${nextRelease.notes}" > /tmp/release-notes.md
 
         KUSTOMIZATION_FILE="deploy/kustomization.yaml"
-        VERSION="${nextRelease.version}"
-        sed -i -E "s/(ref=)v[0-9]+\.[0-9]+\.[0-9]+/\1${VERSION}/g" "$KUSTOMIZATION_FILE"
-        sed -i -E "s/(newTag:)[[:space:]]*v[0-9]+\.[0-9]+\.[0-9]+/\1 ${VERSION}/g" "$KUSTOMIZATION_FILE"
+        sed -i -E "s/(ref=)v[0-9]+\.[0-9]+\.[0-9]+/\1${nextRelease.version}/g" "$KUSTOMIZATION_FILE"
+        sed -i -E "s/(newTag:)[[:space:]]*v[0-9]+\.[0-9]+\.[0-9]+/\1 ${nextRelease.version}/g" "$KUSTOMIZATION_FILE"
